# PyXbar

./: .gitignore  Makefile  README.md  pyproject.toml  xbar.py
pyxbar/: __init__.py  __main__.py  __version__.py  config.py  menu.py  menu_icons.py  menu_image.py  menu_items.py  types.py  utils.py
